--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.less
@@ -26,6 +26,9 @@
         &.background {
             background: @@colorSet;
         }
+        &.fill {
+            fill: @@colorSet;
+        }
     }
 
     .mixin-loop(@index - 1);
