--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
@@ -425,6 +425,7 @@
             .align-items(center);
             .justifyContet(space-between);
 
+
             .department-name {
                 font-weight: bold;
                 font-size: 24px;
@@ -434,6 +435,10 @@
                 width: 18px;
                 height: 18px;
             }
+        }
+
+        .department-courses {
+            width: 100%;
         }
 
         > li {
