Changed to css grid + md-dialog work

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
@@ -1,5 +1,7 @@
 ﻿@import "variables.less";
-
+.md-toast-animating{
+    overflow: auto !important;
+}
 .class-choose {
     @media (min-width: 960px) {
         margin-left: -@widthOfSideMenu;
@@ -417,8 +419,25 @@
         }
     }
 
-    .results {
+    .grid-container {
+        width: 100%;
         margin: 0 auto;
+    }
+
+    .results {
+        -moz-column-count: 4;
+        -moz-column-gap: 0px;
+        -webkit-column-count: 4;
+        -webkit-column-gap: 0px;
+        column-count: 4;
+        column-gap: 0px;
+        width: 100%;
+
+        > li {
+            display: inline-block;
+            margin-bottom: 0px;
+            width: 100%;
+        }
 
         .title {
             .displayFlex;
