--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -93,7 +93,7 @@
         </md-autocomplete>
         <md-input-container class="form-field">
             <label for="className">@UniversityResources.EnterClassName</label>
-            <input ng-model="cc.create.name" id="className" required md-no-asterisk autocomplete="off" type="text" name="name" ng-change="createBox.name.$setValidity('server',true)"/>
+            <input ng-model="cc.create.name" id="className" required md-no-asterisk autocomplete="off" type="text" name="name" ng-change="createBox.name.$setValidity('server',true)" />
             <div class="error" ng-messages="createBox.name.$error">
                 <div ng-message="required">@GeneralResources.RequiredField</div>
                 <div ng-message="server">{{cc.create.error}}</div>
@@ -102,11 +102,11 @@
 
         <md-input-container class="form-field">
             <label for="classNumber">@UniversityResources.EnterCode</label>
-            <input ng-model="cc.create.number" id="classNumber" autocomplete="off" type="text" name="classNumber" ng-change="createBox.name.$setValidity('server',true)"/>
+            <input ng-model="cc.create.number" id="classNumber" autocomplete="off" type="text" name="classNumber" ng-change="createBox.name.$setValidity('server',true)" />
         </md-input-container>
         <md-input-container class="form-field">
             <label for="proffesor">@UniversityResources.Instructor</label>
-            <input ng-model="cc.create.professor" id="proffesor" autocomplete="off" type="text" name="proffesor" ng-change="createBox.name.$setValidity('server',true)"/>
+            <input ng-model="cc.create.professor" id="proffesor" autocomplete="off" type="text" name="proffesor" ng-change="createBox.name.$setValidity('server',true)" />
         </md-input-container>
         <div class="buttons">
             <button class="cancel-btn" type="reset" ng-click="cc.showCreateClass = false;">@GeneralResources.Cancel</button>
@@ -118,8 +118,8 @@
     <div class="title">
         <div class="department-name ellipsis" ng-bind="::department.name" d-color="{{::department.name}}" title="{{::department.name}}"></div>
         <div class="lock">
-                <md-icon md-svg-icon="t:closed-lock" class="lock fill" d-color="{{::department.name}}"></md-icon>
-            </div>
+            <md-icon md-svg-icon="t:closed-lock" class="lock fill" d-color="{{::department.name}}"></md-icon>
+        </div>
     </div>
     <div>
         <h5>you need permission to access this section</h5>
@@ -138,31 +138,40 @@
     </ol>
 </script>
 <script type="text/ng-template" id="dialog.tmpl.html">
-                <md-dialog class="selected-class-dialog" ng-init="key = cd.selectedCourse.department">
-                    <md-toolbar layout="row" layout-align="space-between center">
-                        <h2>Selected class</h2>
-    </md-toolbar>
-                    <md-dialog-content>
-                        <div class="department-name" d-color="{{::key.length}}">{{cd.selectedCourse.department}}</div>
-                        <div class="center">
-                            <button class="prev">
-                                <md-icon md-svg-icon="p:arrow-right"></md-icon>
-                            </button>
-                            <div class="box-container" ng-init="e = cd.selectedCourse" ng-include="'slim-box-template.html'"></div>
-                            <button class="next">
-                                <md-icon md-svg-icon="p:arrow-right"></md-icon>
-                            </button>
+    <md-dialog class="selected-class-dialog" @*ng-init="key = cd.selectedCourse.department"*@>
+        <md-toolbar layout="row" layout-align="space-between center">
+            <h2>Selected class</h2>
+        </md-toolbar>
+        <md-dialog-content>
+            <div class="department-name" d-color="{{::key.length}}">{{cd.selectedCourse.department}}</div>
+            <div class="center">
+                <button class="prev">
+                    <md-icon md-svg-icon="p:arrow-right"></md-icon>
+                </button>
+                <div class="box-container">
+                    <div class="icon background" d-color="{{::department.name}}" ng-bind="::cd.selectedCourse.name.substr(0,2) | lowercase"></div>
+                    <div class="data">
+                        <h5 class="name ellipsis" d-color="{{::department.name}}" ng-bind="::cd.selectedCourse.name" title="{{::cd.selectedCourse.name}}"></h5>
+                        <div class="metadata">
+                            <div class="code ellipsis" ng-bind="::cd.selectedCourse.courseId"></div>
+                            <div class="professor ellipsis" ng-bind="::cd.selectedCourse.professor"></div>
                         </div>
-                        <div class="buttons">
-                            <button ng-click="cd.close()" class="cancel-btn">Cancel</button>
-                            <button ng-click="cd.remove()" class="action-btn">Remove Class</button>
-                        </div>
-                    </md-dialog-content>
-                </md-dialog>
+                    </div>
+                </div>
+                <button class="next">
+                    <md-icon md-svg-icon="p:arrow-right"></md-icon>
+                </button>
+            </div>
+            <div class="buttons">
+                <button ng-click="cd.close()" class="cancel-btn">Cancel</button>
+                <button ng-click="cd.remove()" class="action-btn">Remove Class</button>
+            </div>
+        </md-dialog-content>
+    </md-dialog>
 </script>
 
 <script defer type="text/ng-template" id="slim-box-template.html">
-    <button class="box-template box-style slim" ga-track-event="['course-choose', 'box']" ng-click="cc.choose(e)">
+    <button class="box-template box-style slim" ga-track-event="['course-choose', 'box']" ng-click="cc.choose(e,department)">
         <div class="icon background" d-color="{{::department.name}}" ng-bind="::e.name.substr(0,2) | lowercase"></div>
         <div class="data">
             <h5 class="name ellipsis" d-color="{{::department.name}}" ng-bind="::e.name" title="{{::e.name}}"></h5>
